src/assets/styles/vars.sass
/* 

// Z-INDEX
// $z-layerOne: 100 // Stars and Back-Menu
// $z-layerTwo: 200 // Landscape
// $z-layerThree: 300 // Clouds + Footer
// $z-layerFour: 400 // Front-Menu
// $z-layerFive: 500 // Modals
// $z-mouse: 999 */

/* BREAKPOINTS */
$break-mobile: 770px
$break-tablet: 1024px
$break-desktop: 1370px

:root
  /* colors */
  --color-black: hsla(0, 0%, 0%, 1)
  --color-white: white
  --color-white-inactive: hsla(0, 0%, 100%, 0.4)
  --opacity-inactive: 0.33
  /* Theme Tron */
  --color-tron: hsla(172, 100%, 75%, 1)
  --color-tron-inactive: hsla(172, 100%, 75%, 0.4)
  /* Theme Nightmode */
  --color-red: hsla(0, 100%, 50%, 1)
  --color-red-inactive: hsla(0, 100%, 50%, 0.4)
  /* Theme basic  */
  --color-grey: #989898
  --color-grey-inactive: #989898
  // Theme Light
  --color-light-bg: var(--color-white)
  --color-light-type: var(--color-black)
  --color-light-type-inverted: var(--color-white)
  --color-light-type-secondary: #A6A6A6
  --color-light-border: #EDEDED
  // Theme Dark
  --color-dark-bg: #1A1A1A
  --color-dark-type: var(--color-white)
  --color-dark-type-inverted: var(--color-black)
  --color-dark-type-secondary: #808080
  --color-dark-border: #2C2C2C
  /* theme */
  --theme-bg: var(--color-black)
  --theme-bg-gradient: 0
  --theme-blok: hsla(0, 0%, 100%, 0)
  --theme-blok-showlines: var(--theme-blok)
  --theme-blok-solid: var(--theme-blok)
  --theme-blok-gradient: 0
  --theme-blok-subpanel: hsla(100, 100%, 100%, 0)
  --theme-rotatingLines-bg: 0
  --theme-slider-indicator: white
  --theme-slider-active: black
  --theme-type: var(--color-tron)
  --theme-type-inactive: var(--color-tron-inactive)
  --theme-type-contrast: var(--color-tron)
  --portrait-dither-blackness: 0.54
  --portrait-dither-threshold: 138
  --portrait-dither-invert: 0
  --cursor-color-bg: var(--theme-type)
  --cursor-color-blok: var(--theme-type)
  --border-color: var(--theme-type)
  --backdrop-filter: 25px

  // typography
  --font-size-mobile: 16px
  --font-size-caption: 0.66rem
  --line-height: 1.45
  @media (max-width: 770px)
    --font-size-caption: 0.8rem

  // Sizing
  --icon-size: 1.1363636364rem
  --border-width: 1px
  --border-fatwidth: 1px
  --border-radius: 0
  --border-gap: 0
  --border-shape:
  --border-hyperlink: 1.5px
  --blok-padding: 1.25rem
  --blok-height: calc(var(--blok-padding) * 2 + var(--line-height) * 1rem)
  --panel-height: 150px
  --panel-perspective-origin: 50% 0vh
  --top-padding-filter: 0
  --spacing-side: 1.25rem
  --spacing-between-images: 1.25rem
  --spacing-base: 1.25rem
  --spacing-icons: 1.25rem
  --spacing-half: 0.625rem
  // 124px panel height + blok height + desired margin
  --spacing-containerTopDistance: 0
  @media (max-width: 770px)
    --border-fatwidth: 2px
    --spacing-side: 1rem
    --spacing-between-images: 0.5rem
    --spacing-base: 1rem
    --spacing-icons: 1rem
    --border-hyperlink: 1px
  @media (max-width: 450px)
    --spacing-icons: 0.75rem

  // Transition
  --transition-button: .33s ease
  --transition-project-hover: .2s ease
  --transition-layout: 0.66s ease-in-out
  --transition-layout-quick: 0.33s ease
  --transition-theme: 0.66s ease-in-out
  --transition-theme-quick: 0.33s ease
  --transition-cursor: 0.25s ease-in-out

// LAYOUTS
body[data-layout='DESKTOP']
  --top-padding-filter: calc(#{var(--blok-height)} * 3)
  --panel-perspective-origin: 50% 0vh

body[data-layout='3D']
  --top-padding-filter: calc(#{var(--blok-height)} * 2)
  --spacing-containerTopDistance: calc(124px + var(--blok-height) + 27vh)
  --panel-perspective-origin: 50% -70rem
  @media (max-width: 770px)
    --spacing-containerTopDistance: calc(124px + var(--blok-height) + 32vh)
    --panel-perspective-origin: 50% -55rem
  @media (max-width: 450px)
    --panel-perspective-origin: 50% -46rem

// THEMES
body[data-theme='LIGHT']
  --theme-bg: #E8E7E3
  --theme-blok: #E8E7E3
  --theme-blok-showlines: transparent
  --theme-blok-solid: #E8E7E3
  --theme-type: black
  --theme-type-inactive: hsla(0, 0%, 0%, 0.33)
  --theme-type-contrast: #E8E7E3
  --cursor-color-bg: black
  --cursor-color-blok: black
  --border-color: black
  --slider-indicator: #E8E7E3
  --slider-indicator-active: black

body[data-theme='KUSAMA']
  --theme-bg: black
  --theme-blok: black
  --theme-blok-showlines: black
  --theme-blok-solid: black
  --theme-type: #DA4B9A
  --theme-type-inactive: hsla(327, 66%, 57%, 0.5)
  --theme-type-contrast: #FFFFFF
  --cursor-color-bg: #DA4B9A
  --cursor-color-blok: #DA4B9A
  --border-color: #DA4B9A
  --slider-indicator: #DA4B9A
  --slider-indicator-active: black
  --theme-bg-gradient: 0.1
  --theme-blok-gradient: 0.1
  --border-width: 1.5px
  --border-fatwidth: 1.5px

body[data-theme='SEGMENTS']
  --theme-bg: var(--color-dark-bg)
  --theme-blok: var(--color-dark-bg)
  --theme-blok-showlines: var(--color-dark-bg)
  --theme-blok-solid: var(--theme-blok)
  --theme-type: var(--color-dark-type)
  --theme-type-inactive: var(--color-dark-type-secondary)
  --theme-type-contrast: black
  --border-color: white
  --cursor-color-bg: white
  --cursor-color-blok: white
  --slider-indicator: white
  --slider-indicator-active: black

body[data-theme='SPACE']
  --theme-bg: black
  --theme-blok: black
  --theme-blok-showlines: black
  --theme-blok-solid: black
  --theme-type: #FFFFFF
  --theme-type-inactive: hsla(0, 0%, 100%, 0.45)
  --theme-type-contrast: black
  --border-color: #FFFFFF
  --cursor-color-bg: #FFFFFF
  --cursor-color-blok: #FFFFFF
  --slider-indicator: white
  --slider-indicator-active: black
  --theme-blok-gradient: 0.1

body[data-theme='KERMIT']
  --theme-bg: white
  --theme-blok: hsla(112, 70%, 60%, 1)
  --theme-blok-showlines: hsla(112, 70%, 60%, 1)
  --theme-blok-solid: hsla(112, 70%, 60%, 1)
  --theme-bg-gradient: 0.05
  --theme-blok-gradient: 0.1
  --theme-type: black
  --theme-type-inactive: hsla(0, 0%, 0%, 0.4)
  --theme-type-contrast: white
  --cursor-color-bg: white
  --cursor-color-blok: black
  --slider-indicator: hsla(112, 70%, 60%, 1)
  --slider-indicator-active: black
  --border-color: black
  --border-radius: 1.175rem
  --border-width: 2px
  --border-fatwidth: 2px
  --border-gap: 1rem
  --spacing-containerTopDistance: 4vh
  &[data-layout='3D']
    --panel-perspective-origin: 50% 0vh
  @media (max-width: 770px)
    --border-gap: 0.5rem
    --theme-bg: black
    --theme-bg-gradient: 0
  @media (orientation: portrait)
    --theme-bg-gradient: 0
    --theme-bg: black

body[data-theme='TRON']
  --theme-bg: var(--color-black)
  --theme-blok: var(--color-black)
  --theme-blok-showlines: transparent
  --theme-blok-solid: var(--color-black)
  --theme-type: hsla(172, 100%, 75%, 1)
  --theme-type-inactive: hsla(172, 100%, 75%, 0.4)
  --theme-type-contrast: black
  --border-color: hsla(172, 100%, 75%, 1)
  --slider-indicator: hsla(172, 100%, 75%, 1)
  --slider-indicator-active: black

body[data-theme='NIGHT']
  --theme-bg: var(--color-black)
  --theme-blok: transparent
  --theme-blok-showlines: var(--theme-blok)
  --theme-blok-solid: var(--color-black)
  --theme-type: var(--color-red)
  --theme-type-inactive: hsla(0, 100%, 50%, 0.5)
  --theme-type-contrast: black
  --border-color: var(--color-red)
  --cursor-color-bg: var(--color-red)
  --cursor-color-blok: var(--color-red)
  --slider-indicator: var(--color-red)
  --slider-indicator-active: black

body[data-theme='BLACK']
  --theme-bg: transparent
  --theme-blok: var(--color-black)
  --theme-blok-showlines: var(--theme-blok)
  --theme-blok-solid: var(--theme-blok)
  --theme-type: var(--color-black)
  --theme-type-inactive: var(--color-grey-inactive)
  --theme-type-contrast: white

body[data-theme='RADIANT']
  --theme-bg: #DAD9E0
  --theme-blok: #DAD9E0
  --theme-blok-showlines: #DAD9E0
  --theme-blok-solid: var(--theme-blok)
  --theme-type: #FA5942
  --theme-type-inactive: hsla(7, 95%, 62%, 0.5)
  --theme-type-contrast: white
  --theme-rotatingLines-bg: 1
  --border-color: #FA5942
  --cursor-color-bg: #FA5942
  --cursor-color-blok: #FA5942
  --slider-indicator: #FA5942
  --slider-indicator-active: #FA5942
  --theme-bg-gradient: 0.06
  --theme-blok-gradient: 0.08

body[data-theme='SKY']
  --theme-bg: linear-gradient(180deg, #375189 0%, #6D79AF 52%, #BFC4DE 100%)
  --theme-blok: transparent
  --theme-blok-solid: transparent
  --theme-blok-showlines: transparent
  --theme-type: white
  --theme-type-inactive: hsla(0, 0%, 0%, 0.4)
  --theme-type-inactive: hsla(0, 0%, 100%, 1)
  --theme-type-contrast: black
  --theme-rotatingLines-bg: 1
  --border-color: white
  --border-width: 2px
  --border-fatwidth: 2px
  --cursor-color-bg: black
  --cursor-color-blok: black
  --slider-indicator: white
  --slider-indicator-active: black

